[package]
name = "hello"
version = "0.1.0"
authors = ["Sachin Jangid <34537025+gittysachin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.1.0", features = ["attributes"] }